# VolAdjGIPDashboard

./: .gitignore  README.md  error.html  pyproject.toml  voladjportfolio_testing.ipynb
VolAdjGIPDashboard/: manage.py  requirements.txt
VolAdjGIPDashboard/DataAcquisition/: admin.py  apps.py  models.py  routers.py
VolAdjGIPDashboard/DataAcquisition/management/commands/: calculate_quad_returns.py  (+5 more)
VolAdjGIPDashboard/DataAcquisition/migrations/: 0001_initial.py  0002_auto_20191016_2010.py  0003_auto_20191016_2036.py  0004_auto_20191016_2051.py  0005_auto_20191019_1544.py  0006_alphavantagehistory.py  0007_quadforecasts.py  0008_auto_20191111_2021.py  0009_auto_20191111_2021.py  0010_cpiforecast.py  0011_auto_20200323_0044.py  0012_quadreturn_quad_stdev.py  0013_auto_20200425_1921.py  0014_commitmentoftraders.py  0015_auto_20200520_2204.py  0016_commitmentoftraders_net_long.py  0017_yahoohistory_realized_volatility_week.py  0018_remove_yahoohistory_realized_volatility_week.py  0019_auto_20201204_1928.py  0020_alphavantagehistory_realized_volatility.py  0021_QuadReturn_generalization.py  0022_bitfinexhistory.py  0023_auto_20210326_2254.py  0024_coingeckohistory_coingeckopair.py  0025_gdpforecast.py  0026_delete_alphavantagehistory.py  0027_auto_20221015_1710.py  0028_signaltimeseries.py  0029_auto_20250507_2106.py  0030_lengthen_yahoohistory_ticker.py  0031_calculated_parameters.py  0032_quadreturn_linear_eoq_95pct.py  0033_quad_forecast_gdp_cpi_stats.py
VolAdjGIPDashboard/UserInterface/: views.py
VolAdjGIPDashboard/VolAdjGIPDashboard/: settings.py  urls.py  wsgi.py
(+3 files in other folders)
