[tool.poetry]
name = "vegi"
version = "0.1.0"
description = ""
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
bitfinex-api-py = "^2.0.3"
django = "3.2.15"
django-bootstrap4 = "^22.2"
numpy = "^1.23.4"
pandas = "^1.5.0"
pandas-datareader = "^0.10.0"
quandl = "^3.7.0"
requests = "^2.28.1"
sklearn = "^0.0"
xlrd = "^2.0.1"
yfinance = "^0.1.77"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
