[tool.poetry]
name = "vegi"
version = "0.1.0"
description = ""
authors = ["Matthew Scheffel <matt@dataheck.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beautifulsoup4 = "^4.11"
bitfinex-api-py = "^2.0"
django = "^3.2"
django-bootstrap4 = "^22.2"
numpy = "^1.23.4"
pandas = "^1.5.0"
pandas-datareader = "^0.10"
quandl = "^3.7"
requests = "^2.28"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
xlrd = "^2.0"
yfinance = "^0.2"
psycopg2 = "^2.9.4"
pymemcache = "^3.5.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
